# fetch_simulation_ws

./: README.md
domain_randomization_dynamic_objects/dynamic_objects/: CMakeLists.txt  package.xml
domain_randomization_dynamic_objects/dynamic_objects/docs/: notes.txt
domain_randomization_dynamic_objects/dynamic_objects/launch/: main_dynamic_objects.launch  simple.launch
domain_randomization_dynamic_objects/dynamic_objects/models/cone/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/cone/meshes/: cone.stl
domain_randomization_dynamic_objects/dynamic_objects/models/demo_cube/: model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/demo_cylinder/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/demo_spam/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/demo_spam/meshes/: nontextured_fixed.stl
domain_randomization_dynamic_objects/dynamic_objects/models/demo_sphere/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/demo_table/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/dodecahedron/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/dodecahedron/meshes/: dodecahedron.stl
domain_randomization_dynamic_objects/dynamic_objects/models/gears/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/gears/meshes/: gears.stl
domain_randomization_dynamic_objects/dynamic_objects/models/gem/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/gem/meshes/: gem.stl
domain_randomization_dynamic_objects/dynamic_objects/models/icosahedron/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/icosahedron/meshes/: icosahedron.stl
domain_randomization_dynamic_objects/dynamic_objects/models/octahedron/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/octahedron/meshes/: octahedron.stl
domain_randomization_dynamic_objects/dynamic_objects/models/parachute/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/prism_hex/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/prism_rectangular/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/prism_tri/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/rubbish_bin/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/snailshell/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/star/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/suzanne/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/teapot/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/tetrahedron/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/tetrahedron_regular/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/toroid/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/models/toroidknot/: model.config  model.sdf
domain_randomization_dynamic_objects/dynamic_objects/src/: dynamic_world_plugin.cpp  earthquake.cpp  simple_world_plugin.cpp
domain_randomization_dynamic_objects/dynamic_objects/worlds/: 2objects_fetchrange_randomenv.world  clean_world.world  dynamic_2objects_simple_with_camera_cornercenter.world  dynamic_3objects_simple_with_camera_cornercenter.world  dynamic_basic_simple_with_camera_cornercenter.world  dynamic_basic_with_camera_cornercenter.world  dynamic_objects.world  dynamic_objects_with_camera.world  dynamic_objects_with_camera_cornercenter.world  dynamic_objects_with_camera_cornercenter_const_orient.world  dynamic_simplest.world  dynamic_simplest_XY.world  dynamic_simplest_XY_2objects.world  empty_5objects.world  simple_world.world
iri_wam/iri_wam_description/: CMakeLists.txt  package.xml
iri_wam/iri_wam_description/config/rviz/: model.rviz
iri_wam/iri_wam_description/launch/: iri_wam_description.launch  iri_wam_display.launch
iri_wam/iri_wam_description/mesh/: wam1_collision.stl  wam2_collision.stl  wam3_collision.stl  wam4_collision.stl  wam5_collision.stl  wam6_collision.stl  wam7_collision.stl  wambase_collision.stl
iri_wam/iri_wam_description/mesh/round_spoon/: model.config  model.sdf
iri_wam/iri_wam_description/mesh/round_spoon/meshes/: Sin ti#U0301tulo.mlp  (+2 more)
iri_wam/iri_wam_description/robots/: upload_iri_wam.launch
iri_wam/iri_wam_description/urdf/: wam.urdf  wam_gazebo.urdf
iri_wam/iri_wam_description/xacro/: iri_wam.urdf.xacro  iri_wam_1.urdf.xacro  iri_wam_2.urdf.xacro  iri_wam_3.urdf.xacro  iri_wam_4.urdf.xacro  iri_wam_5.urdf.xacro  iri_wam_6.urdf.xacro  iri_wam_7.urdf.xacro  iri_wam_base.urdf.xacro  iri_wam_tcp.urdf.xacro
iri_wam/iri_wam_description/xacro/misc/: box.urdf.xacro  cylinder.urdf.xacro  cylinder_object.urdf.xacro  generic_camera.urdf.xacro  hokuyo_laser.urdf.xacro  iri_wam.gazebo.xacro  kinect.urdf.xacro  light_sensor.urdf.xacro  spoon.urdf.xacro  table.urdf.xacro  vertical_stick.urdf.xacro  wam_with_camera.urdf.xacro
iri_wam/iri_wam_gazebo/: CMakeLists.txt  package.xml
iri_wam/iri_wam_gazebo/config/: iri_wam_control.yaml
iri_wam/iri_wam_gazebo/launch/: iri_wam.launch  iri_wam_control.launch  main.launch  main_10_balls.launch  main_20_balls.launch  main_30_balls.launch  main_all_balls.launch  put_iriwam_in_world.launch  robot_simulation_test.launch  start_world.launch
iri_wam/iri_wam_gazebo/models/chinese_bowl_blue/: model.config  model.sdf
iri_wam/iri_wam_gazebo/models/chinese_bowl_red/: model.config  model.sdf
iri_wam/iri_wam_gazebo/worlds/: .iri_wam_affordances_half.world.swp  iri_wam_10_balls.world  iri_wam_20_balls.world  iri_wam_30_balls.world  iri_wam_affordances_mini.world  iri_wam_no_balls.world
(+115 files in other folders)
